test: Added integration tests and zip build scripts

--- a/.planning/phases/05-e2e-tests/05-01-PLAN.md
+++ b/.planning/phases/05-e2e-tests/05-01-PLAN.md
@@ -6,8 +6,8 @@ wave: 1
 depends_on: []
 files_modified:
   - overlay.js
-  - e2e/setup.js
-  - e2e/tests/spotlight.e2e.test.js
+  - test/e2e/setup.js
+  - test/e2e/tests/spotlight.e2e.test.js
 autonomous: true
 
 must_haves:
@@ -19,18 +19,18 @@ must_haves:
     - path: "overlay.js"
       provides: "data-testid attributes for stable E2E selectors"
       contains: "data-testid"
-    - path: "e2e/setup.js"
+    - path: "test/e2e/setup.js"
       provides: "Enhanced setup with service worker detection"
       contains: "getServiceWorker"
-    - path: "e2e/tests/spotlight.e2e.test.js"
+    - path: "test/e2e/tests/spotlight.e2e.test.js"
       provides: "3-5 E2E tests covering critical user flows"
       min_lines: 100
   key_links:
-    - from: "e2e/tests/spotlight.e2e.test.js"
-      to: "e2e/setup.js"
+    - from: "test/e2e/tests/spotlight.e2e.test.js"
+      to: "test/e2e/setup.js"
       via: "import launchBrowserWithExtension"
       pattern: "import.*setup"
-    - from: "e2e/tests/spotlight.e2e.test.js"
+    - from: "test/e2e/tests/spotlight.e2e.test.js"
       to: "#arcify-spotlight-dialog"
       via: "waitForSelector with data-testid"
       pattern: "data-testid"
@@ -56,8 +56,8 @@ Output: Enhanced E2E infrastructure with stable selectors, plus 3-5 E2E tests co
 @.planning/phases/05-e2e-tests/05-RESEARCH.md
 
 # Existing E2E scaffolding
-@e2e/setup.js
-@e2e/example.e2e.test.js
+@test/e2e/setup.js
+@test/e2e/example.e2e.test.js
 
 # Overlay component (target for data-testid)
 @overlay.js
@@ -67,7 +67,7 @@ Output: Enhanced E2E infrastructure with stable selectors, plus 3-5 E2E tests co
 
 <task type="auto">
   <name>Task 1: Add data-testid attributes and enhance E2E setup</name>
-  <files>overlay.js, e2e/setup.js</files>
+  <files>overlay.js, test/e2e/setup.js</files>
   <action>
 **Part A: Add data-testid attributes to overlay.js**
 
@@ -81,7 +81,7 @@ Add data-testid attributes to key elements for stable E2E selectors. Modify the 
 
 These complement existing IDs/classes - do NOT remove existing selectors (needed for CSS).
 
-**Part B: Enhance e2e/setup.js**
+**Part B: Enhance test/e2e/setup.js**
 
 Replace basic `waitForExtension()` with proper service worker detection pattern from research:
 
@@ -137,19 +137,19 @@ Keep existing `launchBrowserWithExtension()` and `closeBrowser()` functions unch
   <verify>
 1. `npm run build` succeeds (overlay.js compiles)
 2. Grep confirms data-testid attributes: `grep -n "data-testid" overlay.js`
-3. Grep confirms setup exports: `grep -n "export.*function" e2e/setup.js`
+3. Grep confirms setup exports: `grep -n "export.*function" test/e2e/setup.js`
   </verify>
   <done>
 - overlay.js has 5 data-testid attributes on key elements
-- e2e/setup.js exports: launchBrowserWithExtension, closeBrowser, getServiceWorker, waitForExtension, openNewTabPage
+- test/e2e/setup.js exports: launchBrowserWithExtension, closeBrowser, getServiceWorker, waitForExtension, openNewTabPage
   </done>
 </task>
 
 <task type="auto">
   <name>Task 2: Create E2E tests for critical user flows</name>
-  <files>e2e/tests/spotlight.e2e.test.js</files>
+  <files>test/e2e/tests/spotlight.e2e.test.js</files>
   <action>
-Create e2e/tests/ directory and spotlight.e2e.test.js with 3-4 focused E2E tests.
+Create test/e2e/tests/ directory and spotlight.e2e.test.js with 3-4 focused E2E tests.
 
 **CRITICAL CONSTRAINTS FROM RESEARCH:**
 1. Cannot test keyboard shortcuts (Alt+L, Alt+T) via Puppeteer - browser-level events not supported
@@ -360,7 +360,7 @@ Delete the example.e2e.test.js placeholder after creating real tests.
 3. All tests pass or have clear failure reason related to environment (not code bugs)
   </verify>
   <done>
-- e2e/tests/spotlight.e2e.test.js exists with 3-4 tests
+- test/e2e/tests/spotlight.e2e.test.js exists with 3-4 tests
 - Tests cover E2E-01 (search flow), E2E-02 (keyboard nav), E2E-03 (tab switch)
 - npm run test:e2e runs successfully
 - example.e2e.test.js removed (no longer needed)
@@ -387,7 +387,7 @@ After both tasks complete:
 3. **Test count verification:**
    ```bash
    # Check test file exists and has expected structure
-   grep -c "it\(" e2e/tests/spotlight.e2e.test.js
+   grep -c "it\(" test/e2e/tests/spotlight.e2e.test.js
    # Should show 3-4 tests
    ```
 
